--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://static.wixstatic.com/media/9bbe05_250621aee7b142de98e15f5cfe3708e2~mv2.jpg/v1/fill/w_32%2Ch_32%2Clg_1%2Cusm_0.66_1.00_0.01/9bbe05_250621aee7b142de98e15f5cfe3708e2~mv2.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    
+    <title>Design Consulting | Maestrokes Consult | Lagos</title>
   </head>
   <body>
     <div id="root"></div>
